Update Exercise 7-1 HTML.html

--- a/Exercise 7-1 HTML.html
+++ b/Exercise 7-1 HTML.html
@@ -22,7 +22,7 @@
         	<li><a href="luncheons.html">Luncheons</a></li>
         	<li><a href="tickets.html">Tickets</a></li>
         	<li><a href="aboutus.html">About Us</a>
-            	<ul>    /* Nested ul element with no link in the href attribute. */
+            	<ul>    <! Nested ul element with no link in the href attribute. >
                 	<li><a href="#">Our History</a></li>
                 	<li><a href="#">Board of Directors</a></li>
                 	<li><a href="#">Past Speakers</a></li>
